Nav Menu Styled

--- a/index.html
+++ b/index.html
@@ -1,5 +1,17 @@
 <!DOCTYPE html>
 <head>
     <link rel="stylesheet" href="styles.css">
-    <
+    <title>Fuji Imports</title>
 </head>
+
+<body>
+    <header id='header'>
+        <a href='' class="logo">Fuji Imports</a>
+        <ul>
+            <li><a href="" class="current">Home</a></li>
+            <li><a href="">Garage</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Support</a></li>
+        </ul>
+    </header>
+</body>
