--- a/index.html
+++ b/index.html
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <head>
-    <link rel="stylesheet" href="styles.css">
-    <title>Fuji Imports</title>
+  <link rel="stylesheet" href="styles.css" />
+  <title>Fuji Imports</title>
 </head>
 
 <body>
-    <header id='header'>
-        <a href='' class="logo">Fuji Imports</a>
-        <ul>
-            <li><a href="" class="current">Home</a></li>
-            <li><a href="">Garage</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Support</a></li>
-        </ul>
-    </header>
+  <header id="header">
+    <a href="" class="logo">Fuji Imports</a>
+    <ul>
+      <li><a href="" class="current">Home</a></li>
+      <li><a href="">Garage</a></li>
+      <li><a href="">About</a></li>
+      <li><a href="">Support</a></li>
+    </ul>
+  </header>
+
+  <section>
+    <img src="img/CherryBlossom.png" id="CherryBlossom">
+    <img src="img/leaves.png" id="leaves">
+    <img src="img/gate.png" id="gate">
+    <img src="img/Mountain.png" id="mountain">
+    <img src="img/Sun.png" id="sun">
+    <img src="img/BlueHorizon.png" id="horizon">
+    <img src="img/c1cff3.png" id="backdrop">
+    <h2 id="text">Fuji<br />Imports</h2>
+    <a href="#" id="btn"><h5>View Garage</h5></a>
+  </section>
+  <div class="bottom">
+    <h2>Japanese Imports</h2>
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc fermentum ut
+      tortor eu maximus. Pellentesque tristique orci auctor, accumsan arcu in,
+      consequat justo. Praesent ac erat in nibh porta tristique. Nullam a nisl
+      sit amet est consequat luctus. Nulla a erat id leo finibus congue
+      efficitur vel massa. Morbi ornare tempor nisi, id venenatis justo maximus
+      non. Fusce sed lorem massa. Aliquam efficitur mattis turpis, ut tempor
+      magna volutpat vel. Nulla ullamcorper aliquam ipsum nec imperdiet. Nam nec
+      ligula tortor. Mauris dapibus suscipit scelerisque.
+    </p>
+  </div>
 </body>
